# dual_natured_agent

./: README.md  classifier.py  env.sample  graph.py  main.py  model.py  pyproject.toml  state.py
nodes/: classify_message.py  emotional_agent.py  logical_agent.py  router.py
