[project]
name = "langgraph-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain[google-genai]>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.58",
    "langgraph>0.2.27",
    "streamlit>=1.45.0",
]
